Traefik/Ingressroute-TCP/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
   name: rabbitmq-cluster-srv
spec:
  selector:
   app: rabbitmq
  type: ClusterIP
  ports:
  - name: broker
    port: 5672
    targetPort: broker
  - name: admin
    port: 15672
    targetPort: admin
